fix: change header height on mobile

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -38,6 +38,7 @@
         background-color: rgba(0, 0, 0, 0.8);
     }
     .header {
+        height: 104px;
         &-logo {
             width: 170px;
         }
